[package]
name = "basic_study"
version = "0.0.1"
authors = ["jy00464346 <jy00464346@163.com>"]

[dependencies]
rand = "0.8.5"
libc = "0.2.154"
#rustc-serialize = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name="test"
path="src/lib/libtest.rs"
crate_type = ["dylib"]
